docs: add description for ping api
